--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -7,3 +7,5 @@ services:
     ports:
       - 8000:80
     env_file: .env
+    volumes:
+      - ../storage/app/requests:/var/www/app/storage/app/requests
